--- a/.env.example
+++ b/.env.example
@@ -19,13 +19,13 @@ SESSION_DRIVER=array
 LOG_CHANNEL=slack
 
 #Slack web hook
-LOG_SLACK_WEBHOOK_URL=https://hooks.slack.com/services/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
+LOG_SLACK_WEBHOOK_URL
 
 DB_CONNECTION=mysql
 DB_HOST=
 DB_PORT=3306
-DB_DATABASE=sample
-DB_USERNAME=admin
+DB_DATABASE=mobnia_test
+DB_USERNAME=root
 DB_PASSWORD=
 
 CACHE_DRIVER=file
@@ -38,11 +38,11 @@ MAIL_USERNAME=
 MAIL_PASSWORD=
 
 #MAIL_DRIVER=mailgun
-#MAILGUN_DOMAIN=mg.invogeservices.com
+#MAILGUN_DOMAIN=mg.test.com
 #MAILGUN_SECRET=
 
-#MAIL_FROM_ADDRESS=no-reply@invogeservices.com
-#MAIL_FROM_NAME="Invoge Services"
+#MAIL_FROM_ADDRESS=no-reply@test.com
+#MAIL_FROM_NAME="Test"
 
 PAYSTACK_PUBLIC=
 PAYSTACK_SECRET=
