--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         "fideloper/proxy": "^4.4",
         "illuminate/notifications": "^7.18",
         "laravel/lumen-framework": "^7.0",
-        "ramsey/uuid": "^4.0"
+        "ramsey/uuid": "^4.0",
+        "fzaninotto/faker": "^1.4"
     },
     "require-dev": {
-        "fzaninotto/faker": "^1.4",
         "phpunit/phpunit": "^8.0",
         "mockery/mockery": "^1.0",
         "darkaonline/swagger-lume": "^7.0"
